// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HoC: withJarb errorMode: tooltip 1`] = `
<div>
  <div
    class="w-100"
    style="outline: 0;"
    tabindex="0"
  >
    <div
      class="mb-3"
      color=""
    >
      <label
        class="form-label"
        for="firstName"
      >
        First name
      </label>
      <input
        class="form-control"
        id="firstName"
        placeholder="Please enter your first name"
        type="text"
        value="yolo"
      />
    </div>
  </div>
</div>
`;

exports[`HoC: withJarb should throw an error when detecting illegal props 1`] = `
"
        withJarb: illegal props detected on \\"JarbInput\\".
        
        The following illegal props were detected: 'onChange' and 'value'.
        
        This happens when providing one or multiple of the following 
        managed props: 'onChange', 'onBlur', 'onFocus', 'value', 'color', 'valid' or 'error' manually. 
        
        You should never provide these props manually instead you should
        trust that \\"withJarb\\" will manage these props for you.

        Remove the following illegal props: 'onChange' and 'value'.
      "
`;

exports[`HoC: withJarb ui default 1`] = `
<div>
  <div
    class="mb-3"
    color=""
  >
    <label
      class="form-label"
      for="firstName"
    >
      First name
    </label>
    <input
      class="form-control"
      id="firstName"
      placeholder="Please enter your first name"
      type="text"
      value="yolo"
    />
  </div>
</div>
`;

exports[`HoC: withJarb ui with error 1`] = `
<DocumentFragment>
  <div
    class="mb-3"
    color="danger"
  >
    <label
      class="form-label"
      for="firstName"
    >
      First name
    </label>
    <input
      aria-invalid="true"
      class="is-invalid form-control"
      id="firstName"
      placeholder="Please enter your first name"
      type="text"
      value="yolo"
    />
    <div>
      <div
        class="invalid-feedback"
      >
        not superman
      </div>
    </div>
  </div>
</DocumentFragment>
`;
